Upgrade Spring Boot 3.2.1  - JDK17  - Using records  - Upgraded some code.